deployment/web/virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: web-ssl
  namespace: ptdmoodle
spec:
  virtualHost:
    domains:
      - moodle.thepilotclub.dev
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: ptdmoodle-web-80
              namespace: gloo-system
  sslConfig:
    secretRef:
      name: dev-cf-ssl
      namespace: gloo-system
    sniDomains:
      - moodle.thepilotclub.dev
